[gd_scene load_steps=5 format=3 uid="uid://cvl3ntsuqgu77"]

[ext_resource type="Script" path="res://_scripts/survivor_game.gd" id="1_63fx7"]
[ext_resource type="PackedScene" uid="uid://dk0kcumid5ijn" path="res://_scenes/player.tscn" id="1_y6l61"]
[ext_resource type="PackedScene" uid="uid://ptcugxagyxpi" path="res://_scenes/pine_tree.tscn" id="2_jn4r2"]

[sub_resource type="Curve2D" id="Curve2D_35hem"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -110, -102, 0, 0, 0, 0, 1831, -99, 0, 0, 0, 0, 1831, 1064, 0, 0, 0, 0, -119, 1056, 0, 0, 0, 0, -110, -102)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_63fx7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1728.0
offset_bottom = 972.0

[node name="Player" parent="." instance=ExtResource("1_y6l61")]
position = Vector2(444, 295)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-444, -295)
curve = SubResource("Curve2D_35hem")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
position = Vector2(-110, -102)
rotation = 0.00154559

[node name="PineTree" parent="." instance=ExtResource("2_jn4r2")]
position = Vector2(791, 301)

[node name="PineTree2" parent="." instance=ExtResource("2_jn4r2")]
position = Vector2(265, 465)

[node name="PineTree3" parent="." instance=ExtResource("2_jn4r2")]
position = Vector2(867, 344)

[node name="PineTree4" parent="." instance=ExtResource("2_jn4r2")]
position = Vector2(150, 54)

[node name="PineTree5" parent="." instance=ExtResource("2_jn4r2")]
position = Vector2(1056, 94)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.45098)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 150
text = "Game Over"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
